@@ -1,5 +1,8 @@
 2014-12-16  Per Bothner  <per@bothner.com>
 
+	* kawa/expression.scm (define-validate): Minor improvements.
+	(visit-exp): Call InlineCalls#visit to gets its type-checking.
+
 	* std_syntax.scm (?): Add a more precise error message.
 
 	* characters.scm (char->integer): Change argument type to character.
